compiler/src/test/resources/golden/errors/lex_empty_interp.err
error: empty interpolation
  --> lex_empty_interp.dawn:2:19
  |
2 |   println("value: {}")
  |                   ^^
error: expected an expression, found `<eof>`
  --> lex_empty_interp.dawn:3:1
  |
3 | 
  | ^
